changes in all auth form

--- a/src/styles/resetpassword.css
+++ b/src/styles/resetpassword.css
@@ -4,10 +4,13 @@
     top:50%;
     left: 50%;
     transform: translate(-50%,-50%);
-    background: linear-gradient(to right, #667db6, #0082c8, #0082c8, #667db6); 
+    background-color: #fff;
+    padding-top: 10px;
     text-align: center;
-    color: #fff;
     font-size: 16px;
+    border-radius: 30px;
+    box-shadow: 10px 5px 5px;
+    color: rgb(92, 84, 84);
 }
 
 .reset-form{
@@ -31,7 +34,8 @@
 }
 
 input[type="text"], input[type="password"]{
-    padding: 10px;
+    padding: 15px;
+    background-color:#ededed !important ;
     border: none;
     width: 95%;
     
