--- a/src/styles/login.css
+++ b/src/styles/login.css
@@ -3,12 +3,14 @@
     position: absolute;
     top:50%;
     left: 50%;
+    padding-top: 10px;
     transform: translate(-50%,-50%);
-    background: linear-gradient(to right, #667db6, #0082c8, #0082c8, #667db6); 
+    background-color: #fff;
     text-align: center;
-    color: #fff;
+    color: rgb(92, 84, 84);
     font-size: 16px;
-    box-shadow: 10px 5px 5px black;
+    border-radius: 30px;
+    box-shadow: 10px 5px 5px;
 }
 
 .login-form{
@@ -32,17 +34,16 @@
 }
 
 input[type="text"], input[type="password"]{
+    padding: 15px;
+    background-color:#ededed !important ;
+    border: none;
+    width: 98%;
+}
+.form-text-field{
     padding: 10px;
     border: none;
     width: 95%;
-    
-}
-.form-text-field{
-    /* padding: 10px; */
-    border: none;
-    width: 95%;
     background: #fff;
-    
 }
 .form-lable{
     padding-bottom: 5px;
@@ -55,7 +56,7 @@ input[type="text"], input[type="password"]{
 }
 .login-link a{
     text-decoration: none;
-    color: #fff;
+    color: rgb(10, 10, 10);
 }
 .login-link a:hover{
     text-decoration: none;
