--- a/src/styles/register.css
+++ b/src/styles/register.css
@@ -4,9 +4,13 @@
     top:50%;
     left: 50%;
     transform: translate(-50%,-50%);
-    background: linear-gradient(to right, #667db6, #0082c8, #0082c8, #667db6); 
+    background-color: #fff;
+    padding-top: 10px;
+    color: rgb(92, 84, 84);
+    border-radius: 30px;
+    /* background: linear-gradient(to right, #667db6, #0082c8, #0082c8, #667db6);  */
     text-align: center;
-    color: #fff;
+    box-shadow: 10px 5px 5px;
     font-size: 16px;
 }
 
@@ -30,10 +34,11 @@
     padding: 10px;
 }
 
-input[type="text"], input[type="password"]{
-    padding: 10px;
+input[type="text"], input[type="password"], input[type="number"]{
+    padding: 15px;
     border: none;
-    width: 95%;
+    background-color:#ededed !important ;
+    width: 98% !important;
     
 }
 .form-lable{
@@ -47,7 +52,7 @@ input[type="text"], input[type="password"]{
 }
 .register-link a{
     text-decoration: none;
-    color: #fff;
+    color: #000000;
 }
 .register-link a:hover{
     text-decoration: none;
