--- a/src/styles/register.css
+++ b/src/styles/register.css
@@ -48,20 +48,21 @@ input[type="text"], input[type="password"], input[type="number"]{
 }
 .register-link {
     display: flex;
-    justify-content: space-around;
+    font-size: 12px;
+    justify-content: space-between;
 }
 .register-link a{
     text-decoration: none;
     color: #000000;
 }
 .register-link a:hover{
-    text-decoration: none;
-    color:#09b83e;
+    color:cornflowerblue;
+    text-decoration: underline;
 }
 
 .form-action{
     display: flex;
-    justify-content: flex-start;
+    justify-content: center;
 }
 
 button{
