--- a/src/styles/common.css
+++ b/src/styles/common.css
@@ -12,3 +12,16 @@
 .likes:hover{
     color: cornflowerblue;
 }
+.authPage{
+    width: 100%;
+    height: auto;
+    background: #232526; /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #232526, #414345); /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #232526, #414345); 
+
+}
+.applicationPage{
+    width: 100%;
+    height: auto;
+}
+
