--- a/src/styles/forgetpassword.css
+++ b/src/styles/forgetpassword.css
@@ -54,8 +54,8 @@ input[type="text"], input[type="password"]{
     color: #fff;
 }
 .forget-link a:hover{
-    text-decoration: none;
-    color:#09b83e;
+    color:cornflowerblue;
+    text-decoration: underline;
 }
 
 .form-action{
@@ -79,3 +79,4 @@ button:hover{
     background:#3aaf85;
     color: #fff;
 }
+
