--- a/src/styles/login.css
+++ b/src/styles/login.css
@@ -16,7 +16,7 @@
 .login-form{
     display: flex;
     padding: 10px;
-    justify-content: flex-start;
+    justify-content: center;
     flex-direction: column;
 }
 
@@ -52,35 +52,20 @@ input[type="text"], input[type="password"]{
 }
 .login-link {
     display: flex;
-    justify-content: space-around;
+    font-size: 12px;
+    color: cornflowerblue;
+    justify-content: space-between;
 }
 .login-link a{
     text-decoration: none;
     color: rgb(10, 10, 10);
 }
 .login-link a:hover{
-    text-decoration: none;
-    color:#09b83e;
+    color:cornflowerblue;
+    text-decoration: underline;
 }
 
 .form-action{
     display: flex;
-    justify-content: flex-start;
-}
-
-button{
-    margin-left: 10px;
-    border: none;
-    padding: 10px 15px 10px 15px;
-    font-size: 14px;
-    background: #fff;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-weight: 500;
-    border-radius: 50px;
-    border: 1px solid #3aaf85;
-    cursor: pointer;
-}
-button:hover{
-    background:#3aaf85;
-    color: #fff;
+    justify-content: center;
 }
